--- a/css/main.css
+++ b/css/main.css
@@ -694,10 +694,25 @@ a{
 	font-size: 15px;
 }
 
+/* 헤더 상단의 hello, sign in 아래 등장했다 사라지는 DIV */
+.hidden_div_appear{
+	display: none;
+	font-size: 13px;
+	padding: 10px;
+	position: absolute;
+	z-index: 9999;
+	background-color: white;
+	margin: -290px 0px 0px 1170px;
+	text-align: center;
+}
+
+#hidden_div_appear_btn{
+	background-color: #EEBC3E;
+	border-radius: 5px;
+	margin: 10px;
+}
 
 /* FOOTER */
-
-
 /* SECTION01 */
 footer{
 	color: white;
