--- a/css/main.css
+++ b/css/main.css
@@ -735,23 +735,22 @@ a{
 }
 
 .footer-section01{
+	float: left;
 	padding: 30px 0px 30px 140px;
 	width: 1520px;
 	height: fit-content;
 	background: #232F3E;
 	font-size: 15px;
-	text-align: center;
-	z-index: 1;
+	/* text-align: center; */
 }
 
 #fs01-01, #fs01-02, #fs01-03, #fs01-04{
+	float: left;
 	text-align: left;
 	margin-left: 100px;
-	float: left;
 	background: #232F3E;
 	padding-bottom: 130px;
 }
-
 
 /* FOOTER - SECTION02 */
 .footer-section02{
@@ -779,7 +778,6 @@ a{
 	border: 1px white solid;
 	margin-left: 20px;
 }
-
 
 /* FOOTER - SECTION03 */
 .footer-section03{
